Fix codemirror clipping issue

--- a/src/garage/main.scss
+++ b/src/garage/main.scss
@@ -68,11 +68,8 @@
             font-family: $code-font;
             line-height: 1.1;
           }
-        }
 
-        .CodeMirror-scroll {
-          // add space on top of code that can scroll
-          padding-top: map_get($spacers, 4);
+          padding-bottom: map_get($spacers, 4);
         }
 
         .CodeMirror-gutters {
